Completed Section 2.6 - Apportioning of Requirements

--- a/main.tex
+++ b/main.tex
@@ -191,9 +191,20 @@
 \subsection{Apportioning of Requirements}
 \label{sub:apportioning_of_requirements}
 % Begin SubSection
-\begin{itemize}
-	\item Identify requirements that may be delayed until future versions of the system
-\end{itemize}
+\begin{enumerate}
+	\item Support for additional car value APIs
+	\begin{itemize}
+    \item The system will initially integrate with a limited set of car value APIs. Future versions will support additional car value APIs to expand data sources and improve valuation accuracy.
+  \end{itemize}
+	\item Multi-language support
+	\begin{itemize}
+    \item The system will initially be available in English only. Future versions will include support for additional languages to cater to users in different regions and expand the user base.
+  \end{itemize}
+	\item Support for electric/hybrid vehicle assessments
+	\begin{itemize}
+    \item The system will initially focus on gas-powered vehicles. Future versions will support specialized electric/hybrid assessments which consider factors like battery health.
+  \end{itemize} 
+\end{enumerate}
 % End SubSection
 
 % End Section
